Adds Books section description and navbar icon pointing to arrow site

--- a/arrow-site/blog/_includes/_nav.html
+++ b/arrow-site/blog/_includes/_nav.html
@@ -1,7 +1,7 @@
 <nav id="site-nav">
     <div class="wrapper">
         <nav class="nav-flex">
-            <a class="nav-brand" title="Arrow" href="{{ site.baseurl }}/">
+            <a class="nav-brand" title="Arrow" href="{{site.data.commons.arrow-site}}">
                 <img src="/img/nav-brand.svg" title="{{ site.name }}">
                 <span>{{ site.name }}</span>
             </a>
