--- a/arrow-site/blog/_includes/_books-list.html
+++ b/arrow-site/blog/_includes/_books-list.html
@@ -1,7 +1,7 @@
 <section id="books">
     <div class="wrapper">
         <h3>Books</h3>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus odit itaque quo placeat possimus, ut. Officia, explicabo. Voluptatem tempora minus magni, tempore quis enim modi. Velit molestiae repudiandae ea nihil.
+        Recommended reading for learning Functional Programming in Kotlin from Arrow maintainers, users, and the Kotlin ecosystem:
         <div class="books-flex">
             {% for book in site.books | sort: "name" %}
             <a class="book-item" href="{{ book.link }}">
