--- a/arrow-site/doc/_includes/_main.html
+++ b/arrow-site/doc/_includes/_main.html
@@ -15,12 +15,12 @@
           <h2 id="{{ item.id }}-title">{{ item.title }}</h2>
           <p  id="{{ item.id }}-description">{{ item.description }}</p>
         </div>
-        <a id="{{ item.id }}-button" class="feature-button {{ item.id }}-button" href="{{ site.baseurl }}{{ item.url }}" title="{{ item.title }}">Learn more</a>
       </div>
       {% endif %}
       {% endfor %}
     </div>
   </div>
+  {% include _header.html %}
   <div class="wrapper">
     <div id="incubator" class="incubator-container feature">
       <div class="incubator-text">
