Undo changes in the arrow-site folder

--- a/arrow-site/doc/_layouts/home.html
+++ b/arrow-site/doc/_layouts/home.html
@@ -4,6 +4,7 @@
 
 <body id="arrow-main">
   {% include _nav.html %}
+  {% include _header.html %}
   {% include _main.html %}
   {% include _footer.html %}
 </body>
